--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   http: ^1.3.0
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
+  shared_preferences: ^2.0.17 # Agregar esta línea
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
-
+  
 flutter:
   uses-material-design: true
 
