actualizacion del boton de inicio de sesion pero no agarra la parte de desaparecer cuando una se loguea

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ flutter:
     - assets/fotodepasteles/fotopastel4.jpg
     - assets/fotodepasteles/fotopastel5.jpg
     - assets/fotodepasteles/fotopastel6.jpg
+    - assets/fotodepasteles/pastelprimero.jpg
 
 
 
