--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ flutter:
     - assets/fotodepasteles/fotopastel5.jpg
     - assets/fotodepasteles/fotopastel6.jpg
     - assets/fotodepasteles/pastelprimero.jpg
+    - assets/fotodepasteles/banner1borcellitas.jpg
+    - assets/fotodepasteles/banner2borcellitas.jpg
 
 
 
