actualizacion de colores e imagenes y logos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
     - assets/fotodepasteles/pastelprimero.jpg
     - assets/fotodepasteles/banner1borcellitas.jpg
     - assets/fotodepasteles/banner2borcellitas.jpg
+    - assets/fotodepasteles/iconoborcelle.jpg
 
 
 
