--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.3.0
+  http: ^1.3.0  # Mantén esta versión
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
-  shared_preferences: ^2.0.17 # Agregar esta línea
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
