--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,9 +4,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.1' // Aquí pones la versión que necesitas
+       classpath 'com.android.tools.build:gradle:8.2.1'
+
     }
 }
+
 
 allprojects {
     repositories {
