--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ flutter:
     - assets/fotodepasteles/banner1borcellitas.jpg
     - assets/fotodepasteles/banner2borcellitas.jpg
     - assets/fotodepasteles/iconoborcelle.jpg
+    - assets/fotodepasteles/pasteldealmendra.jpg
+    - assets/fotodepasteles/pasteldequesodebola.jpg
+    - assets/fotodepasteles/pastelferrero.jpg
+    - assets/fotodepasteles/pasteldemandarina.png
 
 
 
