perfil de usuario

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   model_viewer_plus: ^1.7.0
   path_provider: ^2.1.2
   font_awesome_flutter: ^10.7.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
