--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,26 +6,28 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.5.4 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.3.0  # Mantén esta versión
-  cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
-  carousel_slider: ^5.0.0
+  http: ^1.1.0
+  cupertino_icons: ^1.0.6
+  google_fonts: ^6.1.0
+  shared_preferences: ^2.2.2
+  flutter_local_notifications: ^16.3.0
+  image_picker: ^1.0.7
   cached_network_image: ^3.3.1
-  shared_preferences: ^2.0.17
+  carousel_slider: ^4.2.1
   model_viewer_plus: ^1.7.0
   path_provider: ^2.1.2
   font_awesome_flutter: ^10.7.0
-  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.1
+  flutter_launcher_icons: ^0.13.1
   
 flutter:
   uses-material-design: true
@@ -52,6 +54,13 @@ flutter:
     - assets/fotodepasteles/pasteldemandarina.png
     - assets/fotodepasteles/
     - lib/Model3D/models/
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/fotodepasteles/iconoborcelle.jpg"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/fotodepasteles/iconoborcelle.jpg"
 
 
 
