--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_local_notifications: ^16.3.0
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
-  carousel_slider: ^4.2.1
+  flutter_carousel_widget: ^2.2.0
   model_viewer_plus: ^1.7.0
   path_provider: ^2.1.2
   font_awesome_flutter: ^10.7.0
@@ -53,8 +53,6 @@ flutter:
     - assets/fotodepasteles/pastelferrero.jpg
     - assets/fotodepasteles/pasteldemandarina.png
     - assets/fotodepasteles/
-    - assets/models/
-    - lib/Model3D/models/
 
 flutter_launcher_icons:
   android: "launcher_icon"
