--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   model_viewer_plus: ^1.7.0
   path_provider: ^2.1.2
   font_awesome_flutter: ^10.6.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
